--- a/gcp/duckdb_gcs.ipynb
+++ b/gcp/duckdb_gcs.ipynb
@@ -2,64 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import duckdb\n",
     "from fsspec import filesystem\n",
-    "import os\n",
-    "cn = duckdb.connect()\n",
-    "cn.register_filesystem(filesystem('gcs'))"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌────────────┬─────────────┬──────────────────┬──────────────────────┬──────────────┬───────────┬───────────┬────────────┬────────────┬──────────────────────────────────────┐\n",
-      "│  Latitude  │  Longitude  │ CreditCardNumber │        Email         │ PhoneNumber  │ FirstName │ LastName  │    Date    │  NetWorth  │                TxnKey                │\n",
-      "│   double   │   double    │      int64       │       varchar        │   varchar    │  varchar  │  varchar  │    date    │   double   │               varchar                │\n",
-      "├────────────┼─────────────┼──────────────────┼──────────────────────┼──────────────┼───────────┼───────────┼────────────┼────────────┼──────────────────────────────────────┤\n",
-      "│  63.305305 │ -154.303574 │ 6011517609545153 │ WMUVtRc@RfjZciH.com  │ 410-815-2637 │ Bertrand  │ Gutkowski │ 2018-05-23 │      10.16 │ 6b691a43-73d9-4784-9397-5a8317418b0f │\n",
-      "│ -48.165188 │  -37.616329 │ 6011504282599022 │ MxnNAYJ@ExcgPvo.ru   │ 927-108-4615 │ Ivah      │ Hoeger    │ 1980-04-29 │        1.7 │ c76a1661-006e-4824-b8aa-5c6cdb5b888b │\n",
-      "│ -10.703768 │   80.755714 │ 6011250327514008 │ esLuYnd@gnCGTpb.ru   │ 794-536-1081 │ Milo      │ Kris      │ 2015-04-01 │       62.5 │ 438be42c-17a8-4cbd-b099-3819c6c95aa6 │\n",
-      "│  -86.62632 │ -160.920425 │ 6011659499022067 │ nbTewVT@BeugcbE.net  │ 326-711-0895 │ Serenity  │ Swift     │ 1991-08-01 │        2.8 │ babd20ec-0e09-4c24-8cd5-5c4ce92b846a │\n",
-      "│ -86.868187 │  -13.870378 │ 6011648226760259 │ lDvdkXc@DicIGal.ru   │ 871-069-3124 │ Nicole    │ Klein     │ 1983-12-16 │  736127.59 │ fe10e21b-758e-49ed-bb52-d82babf5a4ef │\n",
-      "│   6.446378 │  -96.131538 │ 6011828189991685 │ RhExpiy@rrYjRey.org  │ 151-082-6947 │ Allen     │ Block     │ 1972-03-27 │  404844.38 │ 7fafee08-6277-4096-9cfa-984afd8551c3 │\n",
-      "│   4.628109 │  134.412033 │ 6011033175756363 │ HMCZTlH@UkyfIPW.ru   │ 410-793-8512 │ Luna      │ Wolff     │ 1988-10-28 │  710189.08 │ 77d5683b-213b-47d6-9505-02d327f6d7ae │\n",
-      "│  -3.582986 │  -56.134216 │ 6011458730949396 │ nISntEc@pVPoGLq.info │ 957-102-1386 │ Leora     │ McKenzie  │ 2023-09-02 │    38880.5 │ bd4215bc-8fc8-44d4-9e3c-eb23ab2ae134 │\n",
-      "│  58.092495 │ -164.416946 │ 6011932718907905 │ fgalToM@hGwCJEm.net  │ 987-452-6103 │ Shana     │ Roob      │ 1982-01-28 │  731036.63 │ 01a65f86-78ee-467e-ada2-7c083c35c682 │\n",
-      "│  33.663731 │  175.896835 │ 6011823207144006 │ tvFMwZV@WorrdvN.net  │ 910-843-5217 │ Ottilie   │ Dietrich  │ 1980-07-16 │     469.55 │ fcdf4473-6ddc-46dd-9993-2c8a12bd3603 │\n",
-      "│      ·     │        ·    │         ·        │          ·           │      ·       │   ·       │  ·        │     ·      │        ·   │                  ·                   │\n",
-      "│      ·     │        ·    │         ·        │          ·           │      ·       │   ·       │  ·        │     ·      │        ·   │                  ·                   │\n",
-      "│      ·     │        ·    │         ·        │          ·           │      ·       │   ·       │  ·        │     ·      │        ·   │                  ·                   │\n",
-      "│  55.754028 │    34.65118 │ 6011601727838406 │ vLZfEUq@wfaqqZB.net  │ 104-395-6271 │ Verner    │ Yost      │ 2000-06-14 │     372.17 │ a670b7f2-d496-4fad-a699-d87049c89f8d │\n",
-      "│  23.349134 │  161.512909 │ 6011458151930960 │ yAdPRKw@QEMSChQ.com  │ 761-958-2410 │ Jermaine  │ Moen      │ 1975-03-06 │ 2533542.96 │ d22f5559-1c85-4853-8a09-75ed5c61486a │\n",
-      "│ -51.184238 │  161.435837 │ 6011310276898940 │ JmGyCyo@uCrlxXB.info │ 348-752-6109 │ Nick      │ Bashirian │ 1974-01-19 │ 4254348.76 │ 780d4fd3-a2cf-4bcd-998c-c19c8ec9ecfa │\n",
-      "│ -45.999794 │ -105.809792 │ 6011901194404098 │ UgLuPrR@FBWJdLd.org  │ 311-024-8956 │ Stephon   │ Raynor    │ 1988-01-27 │     252.63 │ 3eea08f6-6879-494f-b8f8-8b543fb87c75 │\n",
-      "│  80.197906 │   84.941422 │ 6011619921238065 │ uuEnISs@bdKhIIt.info │ 174-689-5103 │ Jonatan   │ Keeling   │ 2009-06-19 │     6487.6 │ 31a898c1-5ab1-4218-af1e-a0df0091f0a1 │\n",
-      "│ -84.236855 │ -144.019379 │ 6011599663452473 │ hAafXPF@daHTSiG.ru   │ 429-101-8365 │ Lennie    │ Kutch     │ 1998-12-17 │      55.05 │ b6181751-18b1-4ef3-b4dd-fb51bbf21ff5 │\n",
-      "│ -78.382088 │    1.621449 │ 6011420160856236 │ LLUlRjx@NDPhTwy.ru   │ 791-103-6485 │ Walker    │ Dicki     │ 2008-09-07 │ 8909793.52 │ 769cc9c3-ad0e-43f5-b572-989d43ca736c │\n",
-      "│  50.500404 │    -4.20065 │ 6011812792886489 │ xZGgDaT@OLvUbJd.biz  │ 794-106-1258 │ Effie     │ Sanford   │ 1970-10-15 │ 4207844.19 │ 9b65b504-cc0b-4da4-af28-3fb5279583fb │\n",
-      "│ -53.322727 │    5.214922 │ 6011617933751548 │ hCkSasU@AZblDmV.ru   │ 104-923-1768 │ Breanne   │ Kautzer   │ 2023-12-06 │       0.53 │ 09e6762a-bc99-42da-a8b5-3701bf40ba19 │\n",
-      "│  78.675972 │  -35.939262 │ 6011306579733905 │ SicXJaE@mprfWXl.ru   │ 287-341-1059 │ Sage      │ Crooks    │ 1970-05-20 │        8.1 │ f9eba670-c955-4d93-8cef-294ebb2de432 │\n",
-      "├────────────┴─────────────┴──────────────────┴──────────────────────┴──────────────┴───────────┴───────────┴────────────┴────────────┴──────────────────────────────────────┤\n",
-      "│ 50 rows (20 shown)                                                                                                                                              10 columns │\n",
-      "└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘\n",
+      "┌────────────┬─────────────┬──────────────────────┬──────────────┬───────────┬──────────────────────────────────────┐\n",
+      "│  Latitude  │  Longitude  │        Email         │ PhoneNumber  │ FirstName │                TxnKey                │\n",
+      "│   double   │   double    │       varchar        │   varchar    │  varchar  │               varchar                │\n",
+      "├────────────┼─────────────┼──────────────────────┼──────────────┼───────────┼──────────────────────────────────────┤\n",
+      "│  63.305305 │ -154.303574 │ WMUVtRc@RfjZciH.com  │ 410-815-2637 │ Bertrand  │ 6b691a43-73d9-4784-9397-5a8317418b0f │\n",
+      "│ -48.165188 │  -37.616329 │ MxnNAYJ@ExcgPvo.ru   │ 927-108-4615 │ Ivah      │ c76a1661-006e-4824-b8aa-5c6cdb5b888b │\n",
+      "│ -10.703768 │   80.755714 │ esLuYnd@gnCGTpb.ru   │ 794-536-1081 │ Milo      │ 438be42c-17a8-4cbd-b099-3819c6c95aa6 │\n",
+      "│  -86.62632 │ -160.920425 │ nbTewVT@BeugcbE.net  │ 326-711-0895 │ Serenity  │ babd20ec-0e09-4c24-8cd5-5c4ce92b846a │\n",
+      "│ -86.868187 │  -13.870378 │ lDvdkXc@DicIGal.ru   │ 871-069-3124 │ Nicole    │ fe10e21b-758e-49ed-bb52-d82babf5a4ef │\n",
+      "│   6.446378 │  -96.131538 │ RhExpiy@rrYjRey.org  │ 151-082-6947 │ Allen     │ 7fafee08-6277-4096-9cfa-984afd8551c3 │\n",
+      "│   4.628109 │  134.412033 │ HMCZTlH@UkyfIPW.ru   │ 410-793-8512 │ Luna      │ 77d5683b-213b-47d6-9505-02d327f6d7ae │\n",
+      "│  -3.582986 │  -56.134216 │ nISntEc@pVPoGLq.info │ 957-102-1386 │ Leora     │ bd4215bc-8fc8-44d4-9e3c-eb23ab2ae134 │\n",
+      "│  58.092495 │ -164.416946 │ fgalToM@hGwCJEm.net  │ 987-452-6103 │ Shana     │ 01a65f86-78ee-467e-ada2-7c083c35c682 │\n",
+      "│  33.663731 │  175.896835 │ tvFMwZV@WorrdvN.net  │ 910-843-5217 │ Ottilie   │ fcdf4473-6ddc-46dd-9993-2c8a12bd3603 │\n",
+      "├────────────┴─────────────┴──────────────────────┴──────────────┴───────────┴──────────────────────────────────────┤\n",
+      "│ 10 rows                                                                                                 6 columns │\n",
+      "└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "cn = duckdb.connect()\n",
+    "cn.register_filesystem(filesystem('gcs'))\n",
     "bucket = os.getenv('GCS_BUCKET')\n",
     "gs_path = f\"gs://{bucket}/test_data/data*.csv\"\n",
-    "sql = f\"select * from read_csv_auto('{gs_path}') limit 50\"\n",
+    "sql = f\"select latitude, longitude, email, phonenumber, firstname, txnkey from read_csv_auto('{gs_path}') limit 10\"\n",
     "cn.sql(sql).show(max_width = 1000)"
    ]
   },
@@ -135,6 +122,7 @@
     }
    ],
    "source": [
+    "#run query to read csv's from gcs and write results back out to gcs in parquet\n",
     "b_sql = f\"\"\"\n",
     "select Date as rpt_dt \n",
     "    ,count(*) as row_cnt\n",
