--- a/substack/articles/2024.08.18 - DuckDb GCS/scratchpad.ipynb
+++ b/substack/articles/2024.08.18 - DuckDb GCS/scratchpad.ipynb
@@ -6,22 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install gcsfs ffspec"
+    "%pip install gcsfs ffspec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import duckdb, os\n",
-    "from fsspec import filesystem"
+    "from fsspec import filesystem\n",
+    "cn = duckdb.connect()\n",
+    "cn.register_filesystem(filesystem('gcs'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +45,7 @@
     }
    ],
    "source": [
-    "cn = duckdb.connect()\n",
-    "cn.register_filesystem(filesystem('gcs'))\n",
+    "\n",
     "bucket = os.getenv('GCS_BUCKET')\n",
     "gs_path = f\"gs://{bucket}/test_data/data*.csv\"\n",
     "sql = f\"select latitude, longitude, email, phonenumber, firstname, txnkey from read_csv_auto('{gs_path}') limit 5\"\n",
@@ -89,20 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x108583530>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "b_sql = f\"\"\"\n",
     "select Date as rpt_dt \n",
@@ -123,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,27 +129,7 @@
       "│ 1978-03-13 │       8 │ 1488752.5000000002 │         8 │\n",
       "│ 1997-10-25 │       6 │           11133.06 │         6 │\n",
       "│ 1972-06-25 │       6 │          533678.01 │         6 │\n",
-      "│ 1985-02-15 │      12 │  7248005.140000001 │        12 │\n",
-      "│ 1979-10-14 │       5 │         1318613.63 │         5 │\n",
-      "│ 1982-02-28 │       5 │ 2319481.6800000006 │         5 │\n",
-      "│ 1995-05-02 │       9 │         4321988.57 │         9 │\n",
-      "│ 2000-06-14 │       8 │  6842205.899999999 │         8 │\n",
-      "│     ·      │       · │              ·     │         · │\n",
-      "│     ·      │       · │              ·     │         · │\n",
-      "│     ·      │       · │              ·     │         · │\n",
-      "│ 2000-07-27 │       5 │          127629.64 │         5 │\n",
-      "│ 1987-12-24 │       3 │         2726097.44 │         3 │\n",
-      "│ 2008-07-14 │       5 │  5887390.029999999 │         5 │\n",
-      "│ 2009-11-06 │      11 │  6338512.299999999 │        11 │\n",
-      "│ 1988-05-28 │       9 │  971432.1599999999 │         9 │\n",
-      "│ 1971-11-16 │       4 │ 1627826.9100000001 │         4 │\n",
-      "│ 1991-10-20 │       3 │         3826269.02 │         3 │\n",
-      "│ 2023-08-15 │       4 │ 11441.189999999999 │         4 │\n",
-      "│ 1979-12-24 │       6 │         3721647.26 │         6 │\n",
-      "│ 2021-05-09 │       5 │          550414.67 │         5 │\n",
-      "├────────────┴─────────┴────────────────────┴───────────┤\n",
-      "│ ? rows (>9999 rows, 20 shown)               4 columns │\n",
-      "└───────────────────────────────────────────────────────┘\n",
+      "└────────────┴─────────┴────────────────────┴───────────┘\n",
       "\n"
      ]
     }
@@ -168,6 +138,7 @@
     "sql = f\"\"\"\n",
     "select *\n",
     "from read_parquet('gs://{bucket}/test_data/data_tsfm.parquet')\n",
+    "limit 5\n",
     "\"\"\"\n",
     "cn.sql(sql).show()"
    ]
