--- a/iceberg/pyicy/test.ipynb
+++ b/iceberg/pyicy/test.ipynb
@@ -143,25 +143,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl\n"
+    "import polars as pl\n",
+    "import uuid\n",
+    "from datetime import date\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pl.scan_iceberg(table).collect()"
+    "#generate 1M rows of dummy data\n",
+    "rows = 1_000_000\n",
+    "\n",
+    "df = pl.DataFrame({\n",
+    "    'row_id': pl.arange(0, rows, eager=True),\n",
+    "    'rpt_dt': pl.Series([date.today()] * rows),\n",
+    "    'some_val': pl.Series(np.floor(np.random.rand(rows) * 100).astype(int)),\n",
+    "    'txn_key': pl.Series([str(uuid.uuid4()) for _ in range(rows)])\n",
+    "}).to_arrow()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create iceberg table of it\n",
+    "table = catalog.create_table(\n",
+    "    \"dummy_data.dummy_ducks2\",\n",
+    "    schema= df.schema,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.append(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pl.scan_iceberg(table).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -174,28 +216,26 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>x</th></tr><tr><td>i32</td></tr></thead><tbody><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr></tbody></table></div>"
+       "<small>shape: (1, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>row_id</th><th>blah</th></tr><tr><td>u32</td><td>i64</td></tr></thead><tbody><tr><td>3000000</td><td>148339965</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (3, 1)\n",
-       "┌─────┐\n",
-       "│ x   │\n",
-       "│ --- │\n",
-       "│ i32 │\n",
-       "╞═════╡\n",
-       "│ 1   │\n",
-       "│ 1   │\n",
-       "│ 1   │\n",
-       "└─────┘"
+       "shape: (1, 2)\n",
+       "┌─────────┬───────────┐\n",
+       "│ row_id  ┆ blah      │\n",
+       "│ ---     ┆ ---       │\n",
+       "│ u32     ┆ i64       │\n",
+       "╞═════════╪═══════════╡\n",
+       "│ 3000000 ┆ 148339965 │\n",
+       "└─────────┴───────────┘"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df2.select(pl.col('row_id').count(), pl.col('some_val').sum().alias('blah'))"
    ]
   }
  ],
