--- a/iceberg/pyicy/test.ipynb
+++ b/iceberg/pyicy/test.ipynb
@@ -6,27 +6,27 @@
    "source": [
     "### Notes\n",
     "\n",
-    "trying to do the yaml pyiceberg file kept failing, thus using the sqlcatalog to get it rolling\n",
-    "\n",
-    "polars works best when you pass in the pyiceberg table object instead of trying to provide a metadata path; much cleaner\n",
-    "\n",
-    "this demo takes duckdb to create a table, convert to pyarrow, push to iceberg, and read with polars :P"
+    "the iceberg extension in duckdb still seems like it needs work. the iceberg_scan function seems to be looking for files like \"version-hint.txt\" which pyiceberg does not generate\n",
+    "best to stick with using pyiceberg table objects for duckdb to read from"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "import duckdb\n",
     "import polars as pl\n",
-    "from pyiceberg.catalog.sql import SqlCatalog"
+    "from pyiceberg.catalog.sql import SqlCatalog\n",
+    "import uuid\n",
+    "from datetime import date\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,151 +59,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Datasets in DuckDB and Polars"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = \"\"\"\n",
-    "select 1 as x\n",
-    "\"\"\"\n",
-    "df = cn.execute(sql).arrow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table = catalog.create_table(\n",
-    "    \"dummy_data.ducks\",\n",
-    "    schema=df.schema,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "table.append(df)\n",
-    "len(table.scan().to_arrow())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x1063cfa30>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cn.execute(\"\"\"\n",
-    "    INSTALL iceberg;\n",
-    "    LOAD iceberg;\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# duckdb chokes here\n",
-    "path = \"~/dream_machine/iceberg/pyicy/icehouse/dummy_data.db/ducks/metadata/*.metadata.json\"\n",
-    "sql = f\"\"\"\n",
-    "SELECT *\n",
-    "FROM iceberg_scan('{path}')\n",
-    "\"\"\"\n",
-    "cn.sql(sql).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import polars as pl\n",
-    "import uuid\n",
-    "from datetime import date\n",
-    "import numpy as np\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#generate 1M rows of dummy data\n",
-    "rows = 1_000_000\n",
+    "rows = 5000\n",
     "\n",
-    "df = pl.DataFrame({\n",
+    "#duckdb\n",
+    "sql = f\"\"\"\n",
+    "    select t.row_id, uuid() as txn_key, current_date as rpt_dt\n",
+    "        ,round(random() * 100,2) as some_val\n",
+    "    from generate_series(1,{rows}) t(row_id)\n",
+    "\"\"\"\n",
+    "\n",
+    "duck_df = cn.execute(sql).arrow()\n",
+    "\n",
+    "#polars\n",
+    "polars_df = pl.DataFrame({\n",
     "    'row_id': pl.arange(0, rows, eager=True),\n",
     "    'rpt_dt': pl.Series([date.today()] * rows),\n",
     "    'some_val': pl.Series(np.floor(np.random.rand(rows) * 100).astype(int)),\n",
     "    'txn_key': pl.Series([str(uuid.uuid4()) for _ in range(rows)])\n",
-    "}).to_arrow()\n"
+    "}).to_arrow()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create iceberg table of it\n",
-    "table = catalog.create_table(\n",
-    "    \"dummy_data.dummy_ducks2\",\n",
-    "    schema= df.schema,\n",
-    ")"
+    "#create the empty tables\n",
+    "table_ducks = catalog.create_table(\"dummy_data.duckdb_data\",schema = duck_df.schema)\n",
+    "table_polars = catalog.create_table(\"dummy_data.polars_data\", schema = polars_df.schema)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table.append(df)"
+    "#append the data to each\n",
+    "table_ducks.append(duck_df)\n",
+    "table_polars.append(polars_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "duckdb table has 5000 rows\n",
+      "polars table has 5000 rows\n"
+     ]
+    }
+   ],
    "source": [
-    "df2 = pl.scan_iceberg(table).collect()"
+    "#validate\n",
+    "print('duckdb table has {0} rows'.format(len(table_ducks.scan().to_arrow())))\n",
+    "print('polars table has {0} rows'.format(len(table_polars.scan().to_arrow())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌──────────┬───────────────────┐\n",
+      "│ tot_rows │      agg_val      │\n",
+      "│  int64   │      double       │\n",
+      "├──────────┼───────────────────┤\n",
+      "│     5000 │ 250860.8700000002 │\n",
+      "└──────────┴───────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read back in duckdb\n",
+    "cn = table_ducks.scan().to_duckdb(table_name=\"duck_back\")\n",
+    "cn.sql(\"select count(row_id) as tot_rows, sum(some_val) as agg_val from duck_back\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -216,26 +173,32 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (1, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>row_id</th><th>blah</th></tr><tr><td>u32</td><td>i64</td></tr></thead><tbody><tr><td>3000000</td><td>148339965</td></tr></tbody></table></div>"
+       "<small>shape: (1, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>tot_rows</th><th>agg_val</th></tr><tr><td>u32</td><td>i64</td></tr></thead><tbody><tr><td>5000</td><td>246610</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (1, 2)\n",
-       "┌─────────┬───────────┐\n",
-       "│ row_id  ┆ blah      │\n",
-       "│ ---     ┆ ---       │\n",
-       "│ u32     ┆ i64       │\n",
-       "╞═════════╪═══════════╡\n",
-       "│ 3000000 ┆ 148339965 │\n",
-       "└─────────┴───────────┘"
+       "┌──────────┬─────────┐\n",
+       "│ tot_rows ┆ agg_val │\n",
+       "│ ---      ┆ ---     │\n",
+       "│ u32      ┆ i64     │\n",
+       "╞══════════╪═════════╡\n",
+       "│ 5000     ┆ 246610  │\n",
+       "└──────────┴─────────┘"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.select(pl.col('row_id').count(), pl.col('some_val').sum().alias('blah'))"
+    "# read back in polars\n",
+    "df = pl.scan_iceberg(table_polars).collect()\n",
+    "\n",
+    "df.select(\n",
+    "    pl.col('row_id').count().alias(\"tot_rows\")\n",
+    "    , pl.col('some_val').sum().alias('agg_val')\n",
+    ")\n"
    ]
   }
  ],
