testing updated iceberg catalog implementation

--- a/misc/iceberg_2024_test/scratchpad.ipynb
+++ b/misc/iceberg_2024_test/scratchpad.ipynb
@@ -2,46 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install pyspark\n",
-    "#%pip install requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import requests\n",
-    "\n",
-    "def download_iceberg_jar(spark_version, scala_version, iceberg_version, target_dir):\n",
-    "\n",
-    "    target_dir = os.path.expanduser(target_dir)\n",
-    "\n",
-    "    # Construct the JAR URL\n",
-    "    base_url = \"https://repo1.maven.org/maven2/org/apache/iceberg\"\n",
-    "    jar_name = f\"iceberg-spark-runtime-{spark_version}_{scala_version}-{iceberg_version}.jar\"\n",
-    "    jar_url = f\"{base_url}/iceberg-spark-runtime-{spark_version}_{scala_version}/{iceberg_version}/{jar_name}\"\n",
-    "    \n",
-    "    os.makedirs(target_dir, exist_ok=True)\n",
-    "    jar_path = os.path.join(target_dir, jar_name)\n",
-    "    \n",
-    "    print(f\"Downloading {jar_name} from {jar_url}...\")\n",
-    "    response = requests.get(jar_url, stream=True)\n",
-    "    \n",
-    "    if response.status_code == 200:\n",
-    "        with open(jar_path, 'wb') as jar_file:\n",
-    "            for chunk in response.iter_content(chunk_size=8192):\n",
-    "                jar_file.write(chunk)\n",
-    "        print(f\"Downloaded successfully: {jar_path}\")\n",
-    "        return jar_path\n",
-    "    else:\n",
-    "        raise Exception(f\"Failed to download {jar_name}. HTTP Status Code: {response.status_code}\")\n"
+    "import utils\n"
    ]
   },
   {
@@ -50,19 +15,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example Usage\n",
+    "# get iceberg runtime\n",
     "spark_version = \"3.5\"\n",
     "scala_version = \"2.12\"\n",
     "iceberg_version = \"1.7.0\"\n",
     "target_dir = \"~/spark_jars/iceberg\"\n",
     "\n",
-    "jar_path = download_iceberg_jar(spark_version, scala_version, iceberg_version, target_dir)\n",
+    "jar_path = utils.download_iceberg_jar(spark_version, scala_version, iceberg_version, target_dir)\n",
     "print(f\"JAR saved at: {jar_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
