--- a/misc/iceberg_2024_test/scratchpad.ipynb
+++ b/misc/iceberg_2024_test/scratchpad.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils\n"
+    "import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JAR saved at: /Users/matthewmartin/spark_jars/iceberg/iceberg-spark-runtime-3.5_2.12-1.7.0.jar\n"
+     ]
+    }
+   ],
    "source": [
     "# get iceberg runtime\n",
     "spark_version = \"3.5\"\n",
@@ -27,9 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/11/28 08:47:20 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -48,9 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "data = [(1, \"Alice\", \"2024-11-28 12:00:00\"),\n",
     "        (2, \"Bob\", \"2024-11-28 13:00:00\")]\n",
