--- a/substack/articles/2024.12.18 - Portability_of_delta_vs_iceberg/scratchpad.ipynb
+++ b/substack/articles/2024.12.18 - Portability_of_delta_vs_iceberg/scratchpad.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install -r requirements.txt"
+    "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,28 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file://./iceberg_warehouse/dummy_data.db/orders/metadata/00001-1a7cde4c-b8af-4109-ad35-952f49dab7a9.metadata.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# heres what we have to do to generate an iceberg table\n",
     "from pyiceberg.catalog.sql import SqlCatalog\n",
     "warehouse_path = \"./iceberg_warehouse\"\n",
-    "catalog = SqlCatalog(\n",
-    "    \"default\",\n",
-    "    **{\n",
-    "        \"uri\": f\"sqlite:///{warehouse_path}/icyhot.db\",\n",
-    "        \"warehouse\": f\"file://{warehouse_path}\",\n",
-    "    },\n",
-    ")\n",
+    "catalog = SqlCatalog(\"default\", **{\"uri\": \"sqlite:///:memory:\", \"warehouse\": f\"file://{warehouse_path}\",})\n",
     "df_ice = df.to_arrow()\n",
     "catalog.create_namespace_if_not_exists(\"dummy_data\")\n",
     "ice_table = catalog.create_table(\"dummy_data.orders\",schema=df_ice.schema)\n",
@@ -61,6 +47,49 @@
     "# need this to get the latest metadata file to point to\n",
     "print(ice_table.metadata_location)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ice_table.metadata_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gcs\n",
+    "import os\n",
+    "bucket = os.getenv(\"GCS_BUCKET\")\n",
+    "project = os.getenv(\"GBQ_PROJECT_ID\")\n",
+    "\n",
+    "from pyiceberg.catalog.sql import SqlCatalog\n",
+    "warehouse_path = f\"gs://{bucket}/icehouse1\"\n",
+    "catalog = SqlCatalog(\"default\",\n",
+    "                      **{\"uri\": \"sqlite:///:memory:\",\n",
+    "                         \"warehouse\": warehouse_path,\n",
+    "                         \"gcs.project-id\": project,\n",
+    "                        },\n",
+    "                    )\n",
+    "df_ice = df.to_arrow()\n",
+    "catalog.create_namespace_if_not_exists(\"dummy_data\")\n",
+    "ice_table = catalog.create_table(\"dummy_data.orders\",schema=df_ice.schema)\n",
+    "ice_table.append(df_ice)\n",
+    "# need this to get the latest metadata file to point to\n",
+    "print(ice_table.metadata_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
