--- a/datafusion/scratchpad.ipynb
+++ b/datafusion/scratchpad.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,12 @@
     "\n",
     "# Create a PyArrow table\n",
     "arrow_table = pa.Table.from_pydict(dummy_data)\n",
-    "ctx.from_arrow(arrow_table, \"dummy_data1\")"
+    "ctx.from_arrow(arrow_table, \"dummy_data1\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "+----+---------+-----+"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
